First Google integration push

--- a/appsscript.json
+++ b/appsscript.json
@@ -1,7 +1,14 @@
 {
   "timeZone": "Europe/Athens",
-  "dependencies": {
-  },
   "exceptionLogging": "STACKDRIVER",
-  "runtimeVersion": "V8"
+  "runtimeVersion": "V8",
+  "dependencies": {
+    "enabledAdvancedServices": [
+      {
+        "userSymbol": "AdminDirectory",
+        "serviceId": "admin",
+        "version": "directory_v1"
+      }
+    ]
+  }
 }
