--- a/appsscript.json
+++ b/appsscript.json
@@ -1,14 +1,16 @@
 {
   "timeZone": "Europe/Athens",
+  "dependencies": {
+  },
   "exceptionLogging": "STACKDRIVER",
   "runtimeVersion": "V8",
-  "dependencies": {
-    "enabledAdvancedServices": [
-      {
-        "userSymbol": "AdminDirectory",
-        "serviceId": "admin",
-        "version": "directory_v1"
-      }
-    ]
-  }
+  "oauthScopes": [
+          "https://www.googleapis.com/auth/spreadsheets.readonly",
+          "https://www.googleapis.com/auth/userinfo.email",
+          "https://www.googleapis.com/auth/spreadsheets",
+          "https://www.googleapis.com/auth/script.container.ui",
+          "https://www.googleapis.com/auth/script.scriptapp",
+          "https://www.googleapis.com/auth/forms",
+          "https://www.googleapis.com/auth/script.send_mail"
+        ]
 }
