--- a/appsscript.json
+++ b/appsscript.json
@@ -10,5 +10,14 @@
     ]
   },
   "exceptionLogging": "STACKDRIVER",
-  "runtimeVersion": "V8"
+  "runtimeVersion": "V8",
+  "oauthScopes": [
+          "https://www.googleapis.com/auth/script.container.ui",
+          "https://www.googleapis.com/auth/spreadsheets.currentonly",
+          "https://www.googleapis.com/auth/script.send_mail",
+          "https://www.googleapis.com/auth/userinfo.email",
+          "https://www.googleapis.com/auth/groups",
+          "https://www.googleapis.com/auth/admin.directory.group",
+          "https://www.googleapis.com/auth/admin.directory.user"
+        ]
 }
