--- a/appsscript.json
+++ b/appsscript.json
@@ -1,26 +1,13 @@
 {
   "timeZone": "Europe/Athens",
   "dependencies": {
-    "enabledAdvancedServices": [
-      {
-        "userSymbol": "AdminDirectory",
-        "serviceId": "admin",
-        "version": "directory_v1"
-      }
-    ]
+    "enabledAdvancedServices": [{
+      "userSymbol": "AdminDirectory",
+      "serviceId": "admin",
+      "version": "directory_v1"
+    }]
   },
   "exceptionLogging": "STACKDRIVER",
-  "runtimeVersion": "V8",
-  "oauthScopes": [
-          "https://www.googleapis.com/auth/script.container.ui",
-          "https://www.googleapis.com/auth/spreadsheets.currentonly",
-          "https://www.googleapis.com/auth/script.send_mail",
-          "https://www.googleapis.com/auth/userinfo.email",
-          "https://www.googleapis.com/auth/groups",
-          "https://www.googleapis.com/auth/admin.directory.group",
-          "https://www.googleapis.com/auth/admin.directory.user",
-          "https://www.googleapis.com/auth/forms",
-          "https://www.googleapis.com/auth/script.scriptapp",
-          "https://www.googleapis.com/auth/drive"
-        ]
+  "oauthScopes": ["https://www.googleapis.com/auth/script.container.ui", "https://www.googleapis.com/auth/spreadsheets.currentonly", "https://www.googleapis.com/auth/script.send_mail", "https://www.googleapis.com/auth/userinfo.email", "https://www.googleapis.com/auth/groups", "https://www.googleapis.com/auth/admin.directory.group", "https://www.googleapis.com/auth/admin.directory.user", "https://www.googleapis.com/auth/forms", "https://www.googleapis.com/auth/script.scriptapp", "https://www.googleapis.com/auth/drive"],
+  "runtimeVersion": "V8"
 }
