--- a/appsscript.json
+++ b/appsscript.json
@@ -3,5 +3,6 @@
   "dependencies": {
   },
   "exceptionLogging": "STACKDRIVER",
+  "oauthScopes": ["https://www.googleapis.com/auth/script.container.ui", "https://www.googleapis.com/auth/spreadsheets.readonly", "https://www.googleapis.com/auth/userinfo.email", "https://www.googleapis.com/auth/spreadsheets", "https://www.googleapis.com/auth/script.scriptapp", "https://www.googleapis.com/auth/forms", "https://www.googleapis.com/auth/script.send_mail"],
   "runtimeVersion": "V8"
 }
